  rounded tax amounts in WC.
- ALL: Typos and unescaped %-sign in message (about EU limit) that gets passed
  through sprintf().
- ALL: During the upgrade to 6.3.0 you can get a possible notice "undefined
  index: foreignVat in Config.php on line 1387". Similar notices but with
  different index names and slightly higher line numbers are also possible.

6.3.0 (2021-06-29)
------------------
Features:
- ALL: Changed the settings under "About your shop":
  * For the fields related to the different tax classes (foreign vat, vat free,
    0 vat) there is now just 1 (drop down) setting instead of the former radio
    button + dropdown. A "Not applicable" value has been added to the drop down.
  * Labels and descriptions for the foreign vat classes has been changed to
    reflect the new rules regarding international sales in the EU that apply as
    of 1 july 2021.
- ALL: Added the ReportThresholdEuCommerce API call to AcumulusClient. It is
  used in the "About Acumulus" block to give you insight into your EU sales
  relative to the threshold.
- ALL: Added the setting 'Percentage EU Omzetdrempel' to 'Uw factuurinstellingen'
  on the advanced settings form. This feature checks your invoices against the
  new EU Commerce threshold above which you should use foreign vat.
- ALL: Added the field vattypeid to the InvoiceAdd API call.

Bugs:
- OC: Update functions were not executed as a call to install(), executed before
  update(), already increased the "data model" version to the new version.
- HS: reinstated use of fallback name for shipping method.
- WC: Sometimes, vat amounts on item lines are stored with a precision of being
  rounded to the cent. If so, the price ex has a higher precision than the price
  inc, even if prices are entered including vat. So, in these cases we should
  not recalculate the price ex after we have obtained a corrected vat rate.
- ALL: Leaving config settings empty was not well supported. This has been